   * new better looking hexgrid
   * new special transition between chasm and dwarvish castle
   * new lava transitions (looks like completely new lava)
   * resolved all glitches with cave walls
 * language and i18n:
   * updated translations: Czech, Esperanto, French, Italian
 * multiplayer maps:
    * revised multiplayer maps: Sablestone Delta, 3p Morituri, 4p Morituri, 
      Merkwuerdigliebe

Version 1.1.13:
 * graphics
   * updated races to support team color: elves, goblins, lizards, ogres, orcs,
     trolls, woses, many dwarves, many humans, many undead, and galleons
   * new baseframes: elvish shaman line, troll whelp line, wose line, galleons,
     ogres, many other units
   * new or improved death, attack, and defence animations for various units
   * new attack icon: ballista
   * terrain
      * various minor terrain and item improvements
      * resolved the worst glitch between chasm and cave-walls.
   * additional star-shaped ellipses for designating special units.
 * language and i18n:
   * updated manpages: French
   * updated manual: Italian
   * updated translations: Czech, Esperanto, French, German, Italian
   * updated DejaVuSans font to 2.12
   * reworked language files
   * added descriptions to the weapons of some campaign units to make sure they
     are correctly translated
 * multiplayer maps:
    * revised multiplayer maps: Charge, Hamlets, Hornshark Island, Silverhead 
      Crossing, Sulla's Ruins, 3p Morituri
 * misc bugfixes:
   * several minor bugs
   * other bugs people did forget to mention that they were fixed

Version 1.1.12:
 * user interface
   * move chat line slider bottom (Multiplayer options)
   * display started game with vacant slot with yellow font
   * fix allow to move other player's (bug #6451)
 * sound
   * add sample_rate option (read only) to solve cracking sound
     on some sound card (Intel HDA, cmipci, ...) (bug #7507)
 * graphics
   * new portraits: Human Bowman