@@ -16,6 +16,8 @@ Version 1.1.13+svn:
  * multiplayer maps:
     * revised multiplayer maps: Sablestone Delta, 3p Morituri, 4p Morituri, 
       Merkwuerdigliebe
+ * misc:
+   * add script to strip ICC profiles from images
 
 Version 1.1.13:
  * graphics
